flux/infrastructure/observability/loki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: loki-write
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "loki-write.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: loki-write
                port: 3100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: loki-read
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "loki-read.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: loki-read
                port: 3100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: loki-gateway
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "loki-gateway.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: loki-gateway
                port: 3100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: loki-backend
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "loki-backend.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: loki-backend
                port: 3100
